# FMRI2IMG

./: .aidigestignore  .aidigestminify  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  codebase.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  docker-release.yml
apps/: infer_sd.py  lora_sanity.py
configs/: config.yaml  wandb.yaml
configs/data/: nsd.yaml  nsd_synth.yaml
configs/eval/: baseline.yaml  default.yaml
configs/generate/: sd.yaml
configs/paths/: paths.yaml
configs/train/: baseline.yaml  debug.yaml  pretrain.yaml
configs/wandb/: wandb.yaml
data/: raw.dvc
reports/eval/: retrieval.txt  retrieval_gnn.txt  retrieval_mlp.txt  retrieval_vit3d.txt
reports/infer/: compare_top3_all.csv
reports/infer/gnn/: Z_gnn.npy  top3_gnn.csv
reports/infer/mlp/: Z_mlp.npy  top3_mlp.csv
reports/infer/vit3d/: Z_vit3d.npy  top3_vit3d.csv
reports/sd_eval/: gnn_clipscores.csv  mlp_clipscores.csv  mlp_refined_clipscores.csv  mlp_refined_summary.txt  mlp_summary.txt  summary_all.csv  vit3d_summary.txt
src/fmri2image/: cli.py
src/fmri2image.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fmri2image/losses/: cca.py  (+2 more)
tests/: check_clip_embeddings.py  conftest.py  test_clip_shapes.py  test_datamodule_shapes.py  test_smoke.py
tools/: aggregate_sd_eval.py  archive_ckpts.sh  compare_infer.py  eval.py  eval_sd.py  fmriprep_run.sh  hpo_optuna.py  infer.py  plot_metrics.py  report_results.py  roi_extract.py  run_ablations.py  show_topk_captions.py
(+27 files in other folders)
